Work on font rendering

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     background: url('../images/matrix5.jpg') repeat;
     background-position: top;
-    /* font-family: 'White Rabbit' !important; */
+    font-family: 'White Rabbit' !important;
     /* src: url("..fonts/whitrabt.ttf"); */
     color: #f0fff8;
 }
