--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: "White Rabbit";
-    src: url("fonts/whitrabt.ttf") format("truetype"), 
-         url("fonts/whitrabt.woff") format("woff");
+    src: url("fonts/whitrabt.woff") format("woff"),
+         url("fonts/whitrabt.ttf") format("truetype"),;
 }
 
 html, body {
@@ -10,7 +10,6 @@ html, body {
     background: url('../images/matrix5.jpg') repeat;
     background-position: top;
     font-family: 'White Rabbit' !important;
-    /* src: url("..fonts/whitrabt.ttf"); */
     color: #f0fff8;
 }
 
@@ -38,7 +37,7 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     height: 150px;
     width: 600px;
 /*     margin: 20px auto; */
