--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ html, body {
     margin: 0;
     background: url('../images/matrix5.jpg') repeat;
     background-position: top;
+    background-size: 100%;
     font-family: 'White Rabbit' !important;
     color: #f0fff8;
 }
